Fixes #1091. If a nick is hyphenated in the Bland style, it will no longer wrap to the next line.

--- a/Resources/Styles/Bland.colloquyStyle/Contents/Resources/main.css
+++ b/Resources/Styles/Bland.colloquyStyle/Contents/Resources/main.css
@@ -30,6 +30,7 @@ i {
 
 .envelope > .member {
 	overflow: hidden;
+	white-space: nowrap;
 	display: block;
 	padding-left: 1ex;
 	width: 14ex;
